
 * added the function "jproxy" to implement Java interfaces with Murmel code
 * added values, multiple-value-call and multiple-value-bind
 * added primitive functions assq, list*
 * added an optional parameter print-escape-p for primitive functions write, writeln, lnwrite
 * added special form "(declaim (optimize..."
 * added limited support for "macroexpand-1" in compiled code (quoted forms only)
 * errormessages contain the filename and linenumber (was: only linenumber)
 * added more complete support for "let dynamic" and "let* dynamic"
   (before 1.2 only "let* dynamic" in interpreted code was supported)
 * [f]round, [f]floor, [f]ceiling and [f]truncate now support 1 or 2 arguments (was: 1)
 * compiled code now can invoke interpreted closures
 * added some benchmarks and found some speedups
 * added some JFR integration

 * mlib: added functions last, map-into, nconc,
   circular-list, compose, multiple-value-compose, conjoin, disjoin, curry, rcurry, doplist,
   unzip, unzip-tails,
   with-accumulator, summing, collecting, reverse-collecting, plist-keys, plist-values

 * backquote expansion generates more efficient code
 * some functions are "opencoded" (i.e. trampolines and/ or argcount checks are omitted,
   regular Java code is emitted instead)
 * fixed compiler primitive "list" to return a mutable list
 * fixed compiled "let*"
 * fixed "append" for compiled code
 * fixed using rplaca on varargs list
 * fixed/ cleaned up feature-flags
 * fixed search directory for load and require
 * fixed defmacro to support multiple body forms
 * fixed handling of symbol names such as \(\b^2\)\ -\ 4*\a*\c


Changes in JMurmel-1.1 relative to JMurmel-1.0

 * added feature expressions #+, #-, and, or, not
 * added reader macros #b #o #f for binary, oct and hex, #\ for characters,
   accept (and ignore) #'
 * added load, require, provide
 * added default library "mlib"
 * added documentation in markdown (murmel-langref.md, mlib.md)
 * fixed numerous bugs